tests/samples/compile_errors/duplicate_declaration/duplicate_dim.bas
Attribute VB_Name = "DuplicateDim"
Sub TestDuplicate()
    Dim x As Integer
    Dim x As String ' Duplicate declaration
End Sub
